--- a/index.html
+++ b/index.html
@@ -1965,24 +1965,23 @@ h2 {
     opacity: 0.6;
     text-align: center;
 }
-  .pack-option {
-    min-width: 80px;
-    padding: 14px 18px;
+ .pack-option {
+    min-width: 72px;
+    padding: 12px 16px;
     border-radius: 999px;
-    background: rgba(255,255,255,0.06);
+    background: rgba(255,255,255,0.08);
     text-align: center;
     cursor: pointer;
-    transition: all 0.25s ease;
+    transition: all 0.2s ease;
     white-space: nowrap;
     font-weight: 500;
     flex-shrink: 0;
 }
 
 .pack-option.active {
-    background: linear-gradient(135deg, #2ecc71, #27ae60);
+    background: #2ecc71;
     color: #000;
     font-weight: 600;
-    transform: scale(1.07);
 }
   
 </style>
