--- a/index.html
+++ b/index.html
@@ -3224,7 +3224,10 @@ html += `
 </div>
 `;
 
-  } else if (product.packs) {
+ } else if (
+    category === "Съедобные грибы" ||
+    category === "Расслабляющий чай"
+) {
 
 // ===== ТОВАРЫ С ФАСОВКАМИ (грибы) =====
 
