--- a/index.html
+++ b/index.html
@@ -1974,6 +1974,57 @@ h2 {
     color: #000;
     font-weight: 600;
 }
+  /* ===== TEA PREMIUM STYLE ===== */
+
+.tea-pack-block {
+    margin-top: 28px;
+    padding: 22px;
+    background: linear-gradient(145deg, rgba(255,255,255,0.05), rgba(255,255,255,0.02));
+    border-radius: 22px;
+    backdrop-filter: blur(10px);
+}
+
+.tea-pack-title {
+    margin-bottom: 16px;
+    font-size: 14px;
+    opacity: 0.7;
+}
+
+.tea-pack-options {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 14px;
+    margin-bottom: 20px;
+}
+
+.tea-pack-option {
+    padding: 14px 0;
+    border-radius: 14px;
+    background: rgba(255,255,255,0.07);
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.25s ease;
+    font-weight: 500;
+}
+
+.tea-pack-option.active {
+    background: linear-gradient(135deg, #2ecc71, #27ae60);
+    color: #000;
+    font-weight: 600;
+    box-shadow: 0 6px 20px rgba(46, 204, 113, 0.4);
+}
+
+.tea-pack-option:hover {
+    transform: translateY(-3px);
+    background: rgba(255,255,255,0.12);
+}
+
+.tea-pack-note {
+    margin-top: 14px;
+    font-size: 13px;
+    opacity: 0.6;
+    text-align: center;
+}
   
 </style>
 </head>
