--- a/index.html
+++ b/index.html
@@ -2037,6 +2037,9 @@ h2 {
     opacity: 0.6;
     text-align: center;
 }
+  .mushroom-pack-option {
+    transition: all 0.3s cubic-bezier(.4,2,.6,1);
+}
   
 </style>
 </head>
