--- a/index.html
+++ b/index.html
@@ -3343,7 +3343,7 @@ else if (category === "Расслабляющий чай") {
 }
   
   else if (category === "Съедобные товары" &&
-         (subCategory.includes("Брауни") || subCategory.includes("Печенье"))) {
+         (subCategory.includes("Брауни с ТГК") || subCategory.includes("Шоколадные печеньки с ТГК"))) {
 
     const qtyOptions = subCategory === "Брауни"
         ? [1,2,3,5]
