--- a/index.html
+++ b/index.html
@@ -2040,6 +2040,27 @@ h2 {
   .mushroom-pack-option {
     transition: all 0.3s cubic-bezier(.4,2,.6,1);
 }
+  .test-edible-block {
+    margin-top: 20px;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.edible-qty-option {
+    padding: 10px 16px;
+    border-radius: 999px;
+    background: rgba(255,255,255,0.08);
+    border: none;
+    color: white;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+.edible-qty-option.active {
+    background: linear-gradient(135deg, #ff416c, #ff4b2b);
+}
   
 </style>
 </head>
