--- a/index.html
+++ b/index.html
@@ -2047,19 +2047,33 @@ h2 {
     flex-wrap: wrap;
 }
 
+.test-edible-block {
+    margin-top: 20px;
+    display: flex;
+    gap: 12px;
+    flex-wrap: wrap;
+}
+
 .edible-qty-option {
-    padding: 10px 16px;
+    padding: 10px 18px;
     border-radius: 999px;
-    background: rgba(255,255,255,0.08);
-    border: none;
-    color: white;
+    background: rgba(255,255,255,0.06);
+    border: 1px solid rgba(255,255,255,0.08);
+    color: #fff;
     font-weight: 500;
     cursor: pointer;
-    transition: all 0.2s ease;
+    transition: all 0.25s ease;
+}
+
+.edible-qty-option:hover {
+    background: rgba(255,255,255,0.12);
 }
 
 .edible-qty-option.active {
     background: linear-gradient(135deg, #ff416c, #ff4b2b);
+    border: none;
+    box-shadow: 0 0 15px rgba(255, 75, 43, 0.4);
+    transform: translateY(-2px);
 }
   
 </style>
