--- a/index.html
+++ b/index.html
@@ -3382,7 +3382,7 @@ else if (
     category === "Съедобные товары" &&
     (
         product.name.toLowerCase().includes("брауни") ||
-        product.name.toLowerCase().includes("печен")5
+        product.name.toLowerCase().includes("печен")
     )
 ) {
 
