--- a/index.html
+++ b/index.html
@@ -2040,40 +2040,62 @@ h2 {
   .mushroom-pack-option {
     transition: all 0.3s cubic-bezier(.4,2,.6,1);
 }
-  .test-edible-block {
-    margin-top: 20px;
+  /* ===== EDIBLE STYLING ===== */
+
+.seed-action-block {
+    margin-top: 25px;
+    padding: 20px;
+    border-radius: 20px;
+    background: rgba(255,255,255,0.03);
+    backdrop-filter: blur(10px);
+}
+
+.seed-pack-options {
     display: flex;
     gap: 10px;
-    flex-wrap: wrap;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
-.test-edible-block {
-    margin-top: 20px;
-    display: flex;
-    gap: 12px;
-    flex-wrap: wrap;
-}
-
-.edible-qty-option {
-    padding: 10px 18px;
+.pack-option {
+    padding: 8px 14px;
     border-radius: 999px;
     background: rgba(255,255,255,0.06);
-    border: 1px solid rgba(255,255,255,0.08);
-    color: #fff;
-    font-weight: 500;
     cursor: pointer;
-    transition: all 0.25s ease;
+    transition: all 0.2s ease;
+    font-weight: 500;
 }
 
-.edible-qty-option:hover {
-    background: rgba(255,255,255,0.12);
+.pack-option.active {
+    background: linear-gradient(135deg, #ff416c, #ff4b2b);
+    box-shadow: 0 0 15px rgba(255,65,108,0.5);
 }
 
-.edible-qty-option.active {
+.seed-qty-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: rgba(255,255,255,0.05);
+    border-radius: 16px;
+    padding: 10px 15px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.seed-qty-row button {
     background: linear-gradient(135deg, #ff416c, #ff4b2b);
     border: none;
-    box-shadow: 0 0 15px rgba(255, 75, 43, 0.4);
-    transform: translateY(-2px);
+    border-radius: 12px;
+    width: 36px;
+    height: 36px;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.seed-qty-row span {
+    font-size: 18px;
+    font-weight: 600;
 }
   
 </style>
