--- a/index.html
+++ b/index.html
@@ -2040,64 +2040,97 @@ h2 {
   .mushroom-pack-option {
     transition: all 0.3s cubic-bezier(.4,2,.6,1);
 }
-  /* ===== EDIBLE STYLING ===== */
+  .edible-pack-option {
+    padding: 12px 0;
+    border-radius: 14px;
+    background: rgba(255,255,255,0.04);
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.25s ease;
+    border: 1px solid rgba(255,255,255,0.06);
+}
+  /* ===== EDIBLE BLOCK ===== */
 
 .seed-action-block {
-    margin-top: 25px;
-    padding: 20px;
-    border-radius: 20px;
     background: rgba(255,255,255,0.03);
-    backdrop-filter: blur(10px);
+    padding: 22px;
+    border-radius: 20px;
+    margin-top: 20px;
+    backdrop-filter: blur(6px);
 }
 
+.seed-pack-title,
+.seed-qty-title {
+    font-size: 13px;
+    opacity: 0.6;
+    margin-bottom: 12px;
+    letter-spacing: 0.5px;
+}
+
+/* сетка кнопок количества */
 .seed-pack-options {
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 12px;
+    margin-bottom: 24px;
 }
 
-.pack-option {
-    padding: 8px 14px;
-    border-radius: 999px;
-    background: rgba(255,255,255,0.06);
+/* кнопки 2 4 6 8 */
+.edible-pack-option {
+    padding: 14px 0;
+    border-radius: 16px;
+    background: rgba(255,255,255,0.04);
+    text-align: center;
     cursor: pointer;
-    transition: all 0.2s ease;
-    font-weight: 500;
+    transition: all 0.25s ease;
+    border: 1px solid rgba(255,255,255,0.06);
+    font-weight: 600;
+    font-size: 14px;
 }
 
-.pack-option.active {
+.edible-pack-option:hover {
+    background: rgba(255,255,255,0.08);
+    transform: translateY(-2px);
+}
+
+.edible-pack-option.active {
     background: linear-gradient(135deg, #ff416c, #ff4b2b);
-    box-shadow: 0 0 15px rgba(255,65,108,0.5);
+    border: none;
+    box-shadow: 0 8px 25px rgba(255,65,108,0.35);
 }
 
+/* + / - блок */
 .seed-qty-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
     background: rgba(255,255,255,0.05);
     border-radius: 16px;
-    padding: 10px 15px;
-    margin-top: 10px;
+    padding: 6px;
     margin-bottom: 20px;
 }
 
 .seed-qty-row button {
-    background: linear-gradient(135deg, #ff416c, #ff4b2b);
-    border: none;
+    width: 42px;
+    height: 42px;
     border-radius: 12px;
-    width: 36px;
-    height: 36px;
+    border: none;
+    background: linear-gradient(135deg, #ff416c, #ff4b2b);
     color: white;
     font-size: 18px;
     cursor: pointer;
+    transition: 0.2s ease;
+}
+
+.seed-qty-row button:active {
+    transform: scale(0.95);
 }
 
 .seed-qty-row span {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 600;
 }
-  
+
 </style>
 </head>
 
@@ -3419,7 +3452,7 @@ html += `
 
     <div class="seed-pack-options">
         ${pieceOptions.map(p => `
-            <div class="pack-option ${p === selectedPiece ? "active" : ""}"
+            <div class="edible-pack-option ${p === selectedPiece ? "active" : ""}"
                  onclick="selectEdiblePack(${p}, '${product.name}', ${product.price})">
                 ${p} шт
             </div>
